aligned icons in stack viewer + swapped orth with slice functions to align the correct buttons usage

--- a/applications/virtual-fly-brain/client/src/css/base.less
+++ b/applications/virtual-fly-brain/client/src/css/base.less
@@ -179,7 +179,7 @@ body {
 }
 
 audio, canvas, img, svg, video {
-    max-width: 100%;
+    // max-width: 100%;
     height: auto;
     box-sizing: border-box;
     margin : 0;
